--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(QtSpaceInvaders VERSION 0.1 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(Qt6 REQUIRED COMPONENTS Quick)
+find_package(Qt6 REQUIRED COMPONENTS Quick Multimedia)
 
 qt_standard_project_setup(REQUIRES 6.8)
 
@@ -16,6 +16,12 @@ qt_add_qml_module(appQtSpaceInvaders
     URI QtSpaceInvaders
     QML_FILES
         Main.qml
+    RESOURCES
+        assets/sfx/shoot.wav
+        assets/sfx/alien_hit.wav
+        assets/sfx/player_hit.wav
+        assets/sfx/wave_clear.wav
+        assets/sfx/game_over.wav
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
@@ -30,7 +36,7 @@ set_target_properties(appQtSpaceInvaders PROPERTIES
 )
 
 target_link_libraries(appQtSpaceInvaders
-    PRIVATE Qt6::Quick
+    PRIVATE Qt6::Quick Qt6::Multimedia
 )
 
 include(GNUInstallDirs)
